[#78]chore : 코드 수정 - 루트 서비스 클래스 트랜잭션 추가